# stm32_template

./: .gitmodules  README.md  cross_compile.txt  dewit.sh  meson.build  stm32f429_cross_file.txt
ext/: README.md  meson.build
inc/: bool.h  error_handler.h  stm32f4xx_hal_conf.h  system_handlers.h
linker/: meson.build  stm32f429.ld
scripts/: gdb.sh  qemu.sh
src/: main.c  meson.build
startup/: crt1.c  meson.build  stm32f429.S  system_handlers.c  vectors.S
util/: gdbopts.init
